# fastAPI-vuejs-scaffold

./: .env.example  .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
backend/: README.md  pyproject.toml
backend/.zed/: settings.json
backend/scripts/: generate_openapi.py
backend/scripts/db/seed/: e2e_data.py
backend/src/your_project_name/: app.py  db.py  dependencies.py  exceptions.py  i18n.py  middleware.py  settings.py  validators.py
backend/src/your_project_name/locales/: en.toml  ja.toml
backend/src/your_project_name/models/: __init__.py  article.py  post.py
backend/src/your_project_name/models/support/: http_error_response.py  http_validation_error.py  paginated_records.py  validation_error.py
backend/src/your_project_name/repositories/: articles.py  posts.py
backend/src/your_project_name/routers/: __init__.py  spa.py
backend/src/your_project_name/routers/api/: __init__.py  articles.py  health.py  posts.py
backend/src/your_project_name/services/: articles.py  auth.py  posts.py
backend/tests/: conftest.py
backend/tests/integration/: test_db.py
backend/tests/integration/routes/: test_static_files.py
backend/tests/integration/routes/api/: test_health.py  test_middleware.py
backend/tests/integration/routes/api/articles/: test_create_article.py  test_delete_article.py  test_get_article.py  test_get_articles.py  test_update_article.py
backend/tests/support/: auth.py  factories.py  json.py
backend/tests/unit/: test_i18n.py  test_settings.py
backend/tests/unit/services/: test_auth.py
(+112 files in other folders)
