[project]
name = "your_project_name"
version = "0.1.0"
description = "fastAPI backend server for Your_Project_Name"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.138.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.2",
    "python-jose[cryptography]>=3.3.0",
    "sentry-sdk>=2.63.0",
    "sqlalchemy-libsql>=0.2.0",
    "sqlmodel>=0.0.38",
    "starlette[full]>=1.3.1",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
your_project_name = "your_project_name.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.19",
    "ty>=0.0.52",
    "pytest-cov>=7.1.0",
    "vcrpy>=7.0.0",
]

[tool.fastapi]
entrypoint = "your_project_name.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/your_project_name"]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]

[dependency-groups]
dev = [
    "vcrpy>=8.2.1",
]
